# remarkable_mouse

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  pyvenv.cfg  remarkable.tablet  remouse.py  setup.py
remarkable_mouse/: __main__.py  codes.py  common.py  evdev.py  ft5406.py  generate_codes.py  notes.md  pen.py  pynput.py  remarkable_mouse.py  version.py  winpen.py
